[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "corelab"
version = "1.0.1"
license = {text = "MIT License"}
authors = [
    {name = "Kevin A. Gomez", email = "kevinalexandr19@gmail.com"}
]
description = "Python library for 2D and 3D drillhole information visualization."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Jupyter",
    "Framework :: Jupyter :: JupyterLab",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: Microsoft :: Windows",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Visualization",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "numba>=0.57.1",
    "tqdm>=4.64.0",
    "plotly>=5.4.0",
    "ipywidgets>=7.7.2",
    "scipy>=1.10.1",
]

[project.urls]
"Homepage" = "https://github.com/kevinalexandr19/corelab"
